<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/LinearLayout"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/include_title"/>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

<RelativeLayout
    android:id="@+id/radio"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_alignParentLeft="true"
        android:id="@+id/img_national_main"
        android:src="@mipmap/ic_u634"
        android:layout_width="120dp"
        android:layout_height="80dp"/>

    <TextView
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/img_national_main"
        android:layout_alignBottom="@+id/img_national_main"
        android:text="0.00"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        android:layout_alignParentRight="true"
        android:id="@+id/txt_national_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
    <ImageView
        android:layout_gravity="right"
        android:src="@mipmap/ic_conversion"
        android:layout_width="40dp"
        android:layout_marginRight="20dp"
        android:layout_height="40dp"/>
    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_alignParentLeft="true"
            android:id="@+id/img_national"
            android:src="@mipmap/ic_u635"
            android:layout_width="120dp"
            android:layout_height="80dp"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_alignTop="@+id/img_national"
            android:layout_alignBottom="@+id/img_national"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20"
            android:layout_alignParentRight="true"
            android:id="@+id/txt_national"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
   <FrameLayout
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:layout_height="0dp">
       <LinearLayout
           android:id="@+id/line_calculator"
           android:visibility="gone"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >
           <RelativeLayout
               android:background="@color/white_three"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <ImageView
                   android:layout_marginRight="10dp"
                   android:layout_centerVertical="true"
                   android:src="@mipmap/ic_1235"
                   android:layout_marginLeft="10dp"
                   android:layout_alignParentLeft="true"
                   android:id="@+id/img_under"
                   android:layout_width="30dp"
                   android:layout_height="match_parent"/>
               <ImageView
                   android:layout_marginLeft="10dp"
                   android:layout_centerVertical="true"
                   android:layout_marginRight="10dp"
                   android:layout_alignParentRight="true"
                   android:id="@+id/img_less"
                   android:src="@mipmap/ic_keyboard_delete"
                   android:layout_width="30dp"
                   android:layout_height="30dp"/>
               <TextView
                   android:gravity="right|center"
                   android:layout_centerVertical="true"
                   android:id="@+id/txt_equal"
                   android:textColor="@color/black"
                   android:layout_toRightOf="@+id/img_under"
                   android:layout_toLeftOf="@+id/img_less"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"/>

           </RelativeLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_c"

                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_"

                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_ac"
                   android:text="@string/study_currency_converter_ac"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_divide_by"
                   android:text="@string/study_currency_converter_divide_by"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_7"
                   android:text="@string/study_currency_converter_7"
                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_8"
                   android:text="@string/study_currency_converter_8"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_9"
                   android:text="@string/study_currency_converter_9"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_multiply"
                   android:text="@string/study_currency_converter_multiply"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_4"
                   android:text="@string/study_currency_converter_4"
                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_5"
                   android:text="@string/study_currency_converter_5"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_6"
                   android:text="@string/study_currency_converter_6"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_less"
                   android:text="@string/study_currency_converter_less"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_3"
                   android:text="@string/study_currency_converter_3"
                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_2"
                   android:text="@string/study_currency_converter_2"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_1"
                   android:text="@string/study_currency_converter_1"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_add"
                   android:text="@string/study_currency_converter_add"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_percent"
                   android:text="@string/study_currency_converter_percent"
                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_0"
                   android:text="@string/study_currency_converter_0"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_point"
                   android:text="@string/study_currency_converter_point"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_equal"
                   android:text="@string/study_currency_converter_equal"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_home"
                   android:text="@string/study_currency_converter_home"
                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_market"
                   android:text="@string/study_currency_converter_market"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_tools"
                   android:text="@string/study_currency_converter_tools"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_me"
                   android:text="@string/study_currency_converter_me"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/line_calculator_"
           android:layout_gravity="bottom"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="100dp">
           <RelativeLayout
               android:background="@color/white_three"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <ImageView

                   android:layout_marginRight="10dp"
                   android:layout_centerVertical="true"
                   android:src="@mipmap/ic_1234"
                   android:layout_marginLeft="10dp"
                   android:layout_alignParentLeft="true"
                   android:id="@+id/img_unders"
                   android:layout_width="30dp"
                   android:layout_height="match_parent"/>

           </RelativeLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp">
               <TextView
                   android:id="@+id/txt_study_currency_converter_homes"
                   android:text="@string/study_currency_converter_home"
                   style="@style/style_study_currency_converter_txt" />
               <TextView
                   android:id="@+id/txt_study_currency_converter_markets"
                   android:text="@string/study_currency_converter_market"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_toolss"
                   android:text="@string/study_currency_converter_tools"
                   style="@style/style_study_currency_converter_txt"/>
               <TextView
                   android:id="@+id/txt_study_currency_converter_mes"
                   android:text="@string/study_currency_converter_me"
                   style="@style/style_study_currency_converter_txt"/>
           </LinearLayout>
       </LinearLayout>

   </FrameLayout>

</LinearLayout>