<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/include_title" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp">
            <TextView
                android:id="@+id/view"
                android:background="@color/bt_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/txt_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_Password_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/sp30"
                android:textStyle="bold" />
        </FrameLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/style_log_input_llayout">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <net.rimoto.intlphoneinput.IntlPhoneInput
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textSize="14sp"
                    style="@style/style_log_edit"
                    android:id="@+id/log_edit_phone"
                    app:flagPaddingEnd="4dp"
                    app:flagPaddingStart="4dp"
                    app:flagPaddingTop="4dp"
                    />
            </LinearLayout>


            <TextView style="@style/style_log_line_txt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--2acaff-->
                <EditText
                    android:inputType="number"
                    android:id="@+id/log_edit_code"
                    style="@style/style_log_cole_edit"
                    android:hint="@string/verification_code" />

                <TextView

                    android:textColor="@color/black"
                    android:id="@+id/log_txt_highlight"
                    style="@style/style_log_highlight_txt"
                    android:text="@string/get_cold" />
            </LinearLayout>

            <TextView style="@style/style_log_line_txt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--2acaff-->
                <EditText

                    android:id="@+id/log_edit_password"
                    style="@style/style_log_cole_edit"
                    android:hint="@string/new_passwored" />

            </LinearLayout>

            <TextView style="@style/style_log_line_txt" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--2acaff-->
                <EditText
                    android:id="@+id/log_edit_new_password"
                    style="@style/style_log_cole_edit"
                    android:hint="@string/resend_new_passworedd" />

            </LinearLayout>
            <TextView style="@style/style_log_line_txt" />
            <Button

                android:id="@+id/log_bt_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/log_bt_log_in_margin_left_right"
                android:layout_marginTop="@dimen/log_bt_log_in_margin_top"
                android:layout_marginRight="@dimen/log_bt_log_in_margin_left_right"
                android:background="@drawable/log_bt_log_in_bg"
                android:text="@string/determine"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>